--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# MacOS / OSX stuff
+.DS_Store
+**/.DS_Store
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
